--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ url: http://timwilliams.kiwi # the base hostname & protocol for your site, e.g. 
 twitter_username:
 github_username:  "t-g-williams"
 linkedin_username: "tim-williams-6a75ab121"
-gscholar: https://scholar.google.co.nz/citations?hl=en&view_op=list_works&gmla=AJsN-F7ua45BO8i1DHccKCUj7VPZqMzoZxfTFasDQNl2_V7GtlfsDKuC70DN5-8fIn8VadBbpoEfmI9BTw5FwKbSHXWa_N0IKA&user=NqnK14EAAAAJ
+scholar_username: "t9WLfKQAAAAJ&hl"
 
 sass:
   sass_dir: assets/sass
