--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Tim Williams
-email: tgw@umich.edu
+email: tgwilnz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Tim Williams' research website
 baseurl: "" # the subpath of your site, e.g. /blog
